--- a/shortLink/src/main/resources/application.properties
+++ b/shortLink/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 spring.application.name=shortLink
 
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.url=jdbc:postgresql://localhost:5432/linksdb
+spring.datasource.username=postgres
+spring.datasource.password=password
+spring.jpa.open-in-view=false
+spring.jpa.hibernate.ddl-auto=update
 
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
+hashids.salt=123
+hashids.min-hash-length=6
+
+app.domain=127.0.0.1:8080/
