feat: add cors and checker url is expired

--- a/shortLink/pom.xml
+++ b/shortLink/pom.xml
@@ -31,9 +31,9 @@
 	</properties>
 	<dependencies>
         <dependency>
-            <groupId>systems.fehn</groupId>
-            <artifactId>hashids-spring-boot-starter</artifactId>
-            <version>1.2.0</version>
+            <groupId>org.hashids</groupId>
+            <artifactId>hashids</artifactId>
+            <version>1.0.3</version>
         </dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
